--- a/package.json
+++ b/package.json
@@ -1,4 +1,22 @@
 {
+  "name": "raffle-lottery",
+  "version": "1.0.0",
+  "author": "Benjamin Anoufa",
+  "license": "MIT",
+  "scripts": {
+    "encrypt": "node scripts/encryptKey.js",
+    "test:hh": "yarn hardhat test --network hardhat",
+    "test:local": "yarn hardhat test --network localhost",
+    "test:goerli": "yarn hardhat test --network goerli",
+    "start:local": "yarn hardhat node",
+    "deploy:hh": "yarn hardhat deploy --network hardhat",
+    "deploy:local": "yarn hardhat deploy --network localhost",
+    "deploy:goerli": "yarn hardhat deploy --network goerli",
+    "lint" : "yarn solhint 'contracts/*.sol'",
+    "lint:fix": "yarn solhint 'contracts/.*sol --fix",
+    "format": "yarn prettier --write",
+    "coverage": "yarn hardhat coverage"
+  },
   "devDependencies": {
     "@chainlink/contracts": "^0.4.1",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
